--- a/package.json
+++ b/package.json
@@ -22,12 +22,17 @@
   "dependencies": {
     "bluebird": "^2.6.0",
     "chalk": "^0.5.1",
+    "gulp-inline": "0.0.11",
+    "gulp-intercept": "^0.1.0",
+    "gulp-minify-css": "^1.2.0",
+    "gulp-uglify": "^1.2.0",
     "hostile": "^1.0.0",
     "install": "^0.1.8",
     "lodash": "^2.4.1",
-    "minimist": "^1.1.0",
+    "minimist": "^1.1.1",
     "npm": "^2.12.0",
-    "open": "^0.0.5",
+    "open": "0.0.5",
+    "random-ua": "0.0.6",
     "request-promise": "^0.4.2",
     "requireindex": "^1.1.0"
   },
